Chapter02/sample/sample02-2.js
const puppy = "cute";
//const puppy = "so cute"; // 'puppy' has already been declared

//puppy = "oh" //error 